[package]
name = "generator_ext"
version = "0.1.1"
authors = ["DutchGhost <kasper199914@gmail.com>"]
description = "Crate for working with generators, and converting them into different kinds of Iterators"
license = "MIT"

[dependencies]
futures={version = "*", optional = true}

[features]
extfutures=["futures"]
