[package]
name = "generator_ext"
version = "0.1.2"
authors = ["DutchGhost <kasper199914@gmail.com>"]
description = "Crate for working with generators, and converting them into different kinds of Iterators"
license = "MIT"
repository = "https://github.com/DutchGhost/GeneratorExt.git"

[dependencies]
futures = {version = "0.2.1", optional = true}

[features]
extfutures=["futures"]
